Some more changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MyCustomView</string>
+    <string name="app_name">REMEDIC</string>
     <string name="btnText">Change</string>
 </resources>
